--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,12 +1,14 @@
-<div id="<%= dom_id tweet %>">
-  <p>
-    <strong>Description:</strong>
-    <%= tweet.description %>
-  </p>
-
-  <p>
-    <strong>Username:</strong>
-    <%= tweet.username %>
-  </p>
-
+<div id="<%= dom_id tweet %>" class="card mb-3">
+  <div class="card-body">
+    <h5>
+      <strong>Description:</strong>
+    </h5>
+    <p class="card-text">
+       <%= tweet.description %>
+    </p>
+    <p class="card-text">
+      <strong>Username:</strong>
+      <%= tweet.username %>
+    </p>
+  </div>
 </div>
