--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,12 +1,12 @@
 <% content_for :title, "Editing tweet" %>
 
-<h1>Editing tweet</h1>
+<div class="container mt-5">
+  <h1 class="mb-4">Editing tweet</h1>
+  <%= render "form", tweet: @tweet %>
+  <br>
 
-<%= render "form", tweet: @tweet %>
-
-<br>
-
-<div>
-  <%= link_to "Show this tweet", @tweet %> |
-  <%= link_to "Back to tweets", tweets_path %>
+  <div class="mt-3">
+     <%= link_to "Show this tweet", @tweet, class: "btn btn-info" %> |
+     <%= link_to "Back to tweets", tweets_path, class:"btn btn-secondary ms-3" %>
+  </div>
 </div>
