--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,11 +1,11 @@
 <% content_for :title, "New tweet" %>
 
-<h1>New tweet</h1>
+<div class="container mt-5">
+   <h1>New tweet</h1>
+   <%= render "form", tweet: @tweet %>
+   <br>
 
-<%= render "form", tweet: @tweet %>
-
-<br>
-
-<div>
-  <%= link_to "Back to tweets", tweets_path %>
+   <div>
+      <%= link_to "Back to tweets", tweets_path, class: "btn btn-secondary mt-3" %>
+   </div>
 </div>
