--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -2,9 +2,9 @@
 
 <%= render @tweet %>
 
-<div>
-  <%= link_to "Edit this tweet", edit_tweet_path(@tweet) %> |
-  <%= link_to "Back to tweets", tweets_path %>
+<div class="mt-3" >
+  <%= link_to "Edit this tweet", edit_tweet_path(@tweet), class: "btn btn-warning me-2" %> |
+  <%= link_to "Back to tweets", tweets_path, class: "btn btn-secondary me-2" %>
 
-  <%= button_to "Destroy this tweet", @tweet, method: :delete %>
+  <%= button_to "Destroy this tweet", @tweet, method: :delete, data: { conform: "Are you sure?" }, class: "btn btn-danger" %>
 </div>
