--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -5,14 +5,18 @@
 <div class="card p-3 mb-4 shadow-sm">
     <div class="mt-3">
       <%= form_with url: tweets_path, method: :get, local: true do %>
-         <div class="form-group">
-             <%= text_field_tag :query, params[:query], placeholder: "Buscar", class:"form-control" %>
-             <%= submit_tag "Buscar", class: "mt-3 btn btn-primary" %>
-         </div>
+        <div class="d-flex justify-content-between align-items-center">
+           <div class="flex-grow-1 mx-3">
+              <%= text_field_tag :query, params[:query], placeholder: "Buscar", class:"form-control" %>
+           </div>
+           <div class="mb-3">    
+              <%= submit_tag "Buscar", class: "mt-3 btn btn-primary" %>
+           </div>
+        </div>   
       <% end %>
    </div>
+     <h1 class="text-center">Tweets</h1>
    <div class="d-flex align-items-center mb-3">
-     <h1>Tweets</h1>
      <%= link_to "New tweet", new_tweet_path, class:"btn btn-primary" %>
    </div>
    <div id="tweets" class="container mt-4">
@@ -38,7 +42,7 @@
       <p>No se encontraron tweets.</p>
     <% end%>
     
-    <div class="mt-4">
+    <div class="mt-4 d-flex justify-content-center">
       <%= paginate @tweets %>
     </div>
 
