--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -6,7 +6,7 @@
   <br>
 
   <div class="mt-3">
-     <%= link_to "Show this tweet", @tweet, class: "btn btn-info" %> |
+     <%= link_to "Show this tweet", @tweet, class: "btn btn-info" %> 
      <%= link_to "Back to tweets", tweets_path, class:"btn btn-secondary ms-3" %>
   </div>
 </div>
