--- a/app/assets/stylesheets/estilos.css
+++ b/app/assets/stylesheets/estilos.css
@@ -3,3 +3,11 @@
     border: 1px solid #ccc;
     border-radius: 10px;
 }
+
+.btn {
+    border-radius: 20px;
+}
+
+.form-control {
+    border-radius: 20px;
+}
