--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -16,7 +16,7 @@
       <% end %>
    </div>
      <h1 class="text-center">Tweets</h1>
-   <div class="d-flex align-items-center m-3 ">
+   <div class="d-flex align-items-center m-3 px-4">
      <%= link_to "New", new_tweet_path, class:"btn btn-primary" %>
    </div>
    <div id="tweets" class="container mt-4 px-4">
@@ -26,7 +26,7 @@
               <div class="card">
                 <div class="card-body">
                   <%= render tweet %>
-                  <div class="text-end">
+                  <div class="text-end px-5">
                     <%= link_to "Show this tweet", tweet %>
                   </div>
                 </div>
