--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -2,9 +2,8 @@
 
 <%= render @tweet %>
 
-<div class="mt-3" >
-  <%= link_to "Edit this tweet", edit_tweet_path(@tweet), class: "btn btn-warning me-2" %> |
-  <%= link_to "Back to tweets", tweets_path, class: "btn btn-secondary me-2" %>
-
-  <%= button_to "Destroy this tweet", @tweet, method: :delete, data: { conform: "Are you sure?" }, class: "btn btn-danger" %>
+<div class="mt-3 d-flex justify-content-start" >
+  <%= link_to "Edit this tweet", edit_tweet_path(@tweet), class: "btn btn-warning mx-2" %> 
+  <%= link_to "Back to tweets", tweets_path, class: "btn btn-secondary mx-2" %>
+  <%= button_to "Destroy this tweet", @tweet, method: :delete, class: "btn btn-danger mx-2" %>
 </div>
